Changed color of button.

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -35,7 +35,7 @@
   <button class="btn btn-success btn-sm" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">
     Inštrukcie k zápasom
   </button>
-  <%= link_to 'Rezervácie kurtov', pages_reservations_path, class: 'btn btn-sm btn-success' %>
+  <%= link_to 'Rezervácie kurtov', pages_reservations_path, class: 'btn btn-sm btn-warning' %>
 </p>
 <div class="collapse" id="match-instructions">
   <div class="card card-body text-justify">
