Changed text on page of reservations.

--- a/app/views/pages/reservations.html.erb
+++ b/app/views/pages/reservations.html.erb
@@ -26,6 +26,10 @@
           Rezervačný systém pre tento klub bude sprístupnený onedlho. Nateraz volaj
           <span class="nowrap"><%= link_to '0911 272 070', 'tel:0911272070' %>.</span>
         </p>
+        <p class="card-text text-center">
+          Na všetky ohlásené ligové zápasy, ktoré sú zverejnené na príslušnom ligovom webe je
+          cena 6€/h.
+        </p>
         <p class="text-center">
           <%= link_to 'Rezervácie 🐜',
                       'https://booking.reservanto.sk/Modal/?id=4297',
@@ -50,6 +54,10 @@
           tlačidlo nižšie. Na stránke sú dva kalendáre pre každý kurt zvlášť, po výbere dátumu sa zobrazia voľné možnosti pre daný kurt.
           Rezervácia platí po obdržaní potvrdenia SMS správou.
         </p>
+        <p class="card-text text-center">
+          Na všetky ohlásené ligové zápasy, ktoré sú zverejnené na príslušnom ligovom webe je
+          cena 5€/h do 16:00 a 6€/h od 16:00.
+        </p>
         <p class="text-center">
           <%= link_to 'Rezervácie 🌳', 'https://kurty.zap.sk', class: 'btn btn-success', target: :_blank %>
         </p>
@@ -71,6 +79,10 @@
           <span class="nowrap"><%= link_to '0903 260 749', 'tel:0903260749' %>.</span>
           Voľné termíny je možné vidieť vopred cez
           tlačidlo nižšie. Na stránke je kalendár, po výbere dátumu sa zobrazia voľné možnosti oboch kurtov.
+        </p>
+        <p class="card-text text-center">
+          Na všetky ohlásené ligové zápasy, ktoré sú zverejnené na príslušnom ligovom webe je
+          cena 5€/h do 16:00 a 6€/h od 16:00.
         </p>
         <p class="text-center">
           <%= link_to 'Rezervácie 💦', 'https://kurtykupko.skedda.com/booking', class: 'btn btn-success', target: :_blank %>
