Added meta description.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="sk">
   <head>
-    <title>matotenis</title>
+    <title>maTOtenis</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Tenisová liga Topoľčany. Zahraj si tenis v Topoľčanoch a okolí s rôznymi súpermi počas celého leta.">
     <meta property="og:url" content="<%= root_url %>" />
     <meta property="og:title" content="matotenis.sk" />
     <meta property="og:description" content="Majstrovstvá Topoľčian v tenise" />
