Season 2024 page changed.

--- a/app/views/pages/season2024.html.erb
+++ b/app/views/pages/season2024.html.erb
@@ -7,9 +7,12 @@
     Ahojte!
   </h2>
   <p class="text-justify">
-    Blíži sa dobré počasie a je načase začať hrať ligu maTOtenis! Ak ste cez zimu zabudli princíp a pravidlá súťaže, nájdete ich na tomto webe, ktorý je opäť
-    spustený. Vzhľadom na podstatné zvýšenie nákladov na prevádzku tenisových webov oboch topoľčianskych
-    líg budú tieto weby v prevádzke zatiaľ iba v mesiacoch apríl-október.
+    Blíži sa dobré počasie a je načase začať hrať ligu maTOtenis! Ak ste cez zimu zabudli
+    <%= link_to 'princíp', pages_about_path, target: :_blank %> a
+    <%= link_to 'pravidlá', pages_rules_path, target: :_blank %>
+    súťaže, nájdete ich na tomto webe, ktorý je opäť spustený. Vzhľadom na podstatné zvýšenie nákladov na
+    prevádzku tenisových webov oboch topoľčianskych líg budú tieto weby v prevádzke zatiaľ iba v mesiacoch
+    apríl-október.
   </p>
 
   <p class="text-justify">
@@ -59,29 +62,29 @@
 
   <hr>
 
-  <p class="text-justify">
-    Dôležité - ak viete, že nemôžete odohrať zápas počas daného kola pre prekážku na svojej strane,
-    môžete do konca tohto kola oznámiť organizátorovi že žiadate zápas preložiť do najbližšieho ďalšieho
-    kola, ak sa tak so súperom viete dohodnúť. Zápasy, ktoré budú na konci kola neodohraté
-    (tzn. nenahlásený výsledok) a nepožiadané o preloženie, budú považované za odignorované a tým
-    pádom zrušené.
-  </p>
-  <ul>
-    <li>preloženie je potrebné dohodnúť so súperom a oznámiť dohodu organizátorovi</li>
-    <li>zápas sa dá preložiť iba do najbližšieho ďalšieho kola</li>
-    <li>pred žrebovaním posledného kola sezóny MUSIA byť uzavreté všetky zápasy</li>
-  </ul>
-  <p class="text-justify">
-    Každý zápas je potrebné vopred nahlásiť organizátorovi SMS/WhatsApp správou kde a kedy sa bude konať!
-  </p>
+<!--  <p class="text-justify">-->
+<!--    Dôležité - ak viete, že nemôžete odohrať zápas počas daného kola pre prekážku na svojej strane,-->
+<!--    môžete do konca tohto kola oznámiť organizátorovi že žiadate zápas preložiť do najbližšieho ďalšieho-->
+<!--    kola, ak sa tak so súperom viete dohodnúť. Zápasy, ktoré budú na konci kola neodohraté-->
+<!--    (tzn. nenahlásený výsledok) a nepožiadané o preloženie, budú považované za odignorované a tým-->
+<!--    pádom zrušené.-->
+<!--  </p>-->
+<!--  <ul>-->
+<!--    <li>preloženie je potrebné dohodnúť so súperom a oznámiť dohodu organizátorovi</li>-->
+<!--    <li>zápas sa dá preložiť iba do najbližšieho ďalšieho kola</li>-->
+<!--    <li>pred žrebovaním posledného kola sezóny MUSIA byť uzavreté všetky zápasy</li>-->
+<!--  </ul>-->
+<!--  <p class="text-justify">-->
+<!--    Každý zápas je potrebné vopred nahlásiť organizátorovi SMS/WhatsApp správou kde a kedy sa bude konať!-->
+<!--  </p>-->
 
-  <hr>
+<!--  <hr>-->
 
-  <p class="text-justify">
-    Oficiálne kurty súťaže sú 1) Mravenisko (TC Topoľčany), 2) kurty v mestskom parku a 3) kurty na kúpalisku.
-    Hráč č. 2 musí rešpektovať výber kurtu hráča č. 1 v týchto kluboch. Ak hráč č. 1 zápasu chce zápas
-    odohrať na iných kurtoch, je k tomu potrebný súhlas súpera - hráča č. 2!
-  </p>
+<!--  <p class="text-justify">-->
+<!--    Oficiálne kurty súťaže sú 1) Mravenisko (TC Topoľčany), 2) kurty v mestskom parku a 3) kurty na kúpalisku.-->
+<!--    Hráč č. 2 musí rešpektovať výber kurtu hráča č. 1 v týchto kluboch. Ak hráč č. 1 zápasu chce zápas-->
+<!--    odohrať na iných kurtoch, je k tomu potrebný súhlas súpera - hráča č. 2!-->
+<!--  </p>-->
 
 <!--  <p class="text-justify">-->
 <!--    Hrať sa bude za zvýhodnené ceny a to-->
@@ -111,10 +114,10 @@
 <!--    </div>-->
 <!--  </div>-->
 
-  <p class="text-justify">
-    Platenie za kurt ostáva, ako to bolo, na hráčovi č. 1 v zápase. Hráč č. 2 poskytuje na zápas nové lopty
-    podľa pravidiel. Všetky informácie sú na tomto webe, no v prípade otázok kontaktujte organizátora.
-  </p>
+<!--  <p class="text-justify">-->
+<!--    Platenie za kurt ostáva, ako to bolo, na hráčovi č. 1 v zápase. Hráč č. 2 poskytuje na zápas nové lopty-->
+<!--    podľa pravidiel. Všetky informácie sú na tomto webe, no v prípade otázok kontaktujte organizátora.-->
+<!--  </p>-->
 
   <p class="text-center mt-4">
     Tomáš Radič<br>
