Changed prices on page.

--- a/app/views/pages/reservations.html.erb
+++ b/app/views/pages/reservations.html.erb
@@ -23,7 +23,7 @@
 <!--          slúži tlačidlo nižšie.-->
 <!--        </p>-->
         <p class="card-text text-center">
-          Rezervačný systém pre tento klub bude sprístupnený onedlho. Nateraz volaj
+          Kurty na Mravenisku sa rezervujú telefonicky na čísle
           <span class="nowrap"><%= link_to '0911 272 070', 'tel:0911272070' %>.</span>
         </p>
         <p class="card-text text-center">
@@ -31,9 +31,6 @@
           cena 6€/h.
         </p>
         <p class="text-center">
-          <%= link_to 'Rezervácie 🐜',
-                      'https://booking.reservanto.sk/Modal/?id=4297',
-                      class: 'btn btn-success disabled', target: :_blank %>
           <%= link_to "📞", "tel:0911272070", class: "btn btn-warning" %>
         </p>
       </div>
@@ -50,16 +47,16 @@
         </div>
         <hr>
         <p class="card-text text-justify">
-          Kurty v parku sa rezervujú cez SMS na číslo <span class="nowrap">0911 503 355.</span> Voľné termíny je možné vidieť vopred cez
-          tlačidlo nižšie. Na stránke sú dva kalendáre pre každý kurt zvlášť, po výbere dátumu sa zobrazia voľné možnosti pre daný kurt.
-          Rezervácia platí po obdržaní potvrdenia SMS správou.
+          Kurty v parku sa rezervujú telefonicky na čísle
+          <span class="text-nowrap"><%= link_to '0911 071 207', 'tel:0911071207' %>.</span>
         </p>
         <p class="card-text text-center">
           Na všetky ohlásené ligové zápasy, ktoré sú zverejnené na príslušnom ligovom webe je
-          cena 5€/h do 16:00 a 6€/h od 16:00.
+          cena 7€/h, ale je potrebné na zápas zajednať 2h, tzn. 14€/zápas.
         </p>
         <p class="text-center">
-          <%= link_to 'Rezervácie 🌳', 'https://kurty.zap.sk', class: 'btn btn-success', target: :_blank %>
+          <%= link_to 'Obsadenosť 🌳', 'https://kurty.zap.sk', class: 'btn btn-success', target: :_blank %>
+          <%= link_to "📞", "tel:0911071207", class: "btn btn-warning" %>
         </p>
       </div>
     </div>
@@ -76,16 +73,14 @@
         <hr>
         <p class="card-text text-justify">
           Kurty na kúpalisku sa rezervujú telefonicky na čísle
-          <span class="nowrap"><%= link_to '0903 260 749', 'tel:0903260749' %>.</span>
-          Voľné termíny je možné vidieť vopred cez
-          tlačidlo nižšie. Na stránke je kalendár, po výbere dátumu sa zobrazia voľné možnosti oboch kurtov.
+          <span class="text-nowrap"><%= link_to '0903 260 749', 'tel:0903260749' %>.</span>
         </p>
         <p class="card-text text-center">
           Na všetky ohlásené ligové zápasy, ktoré sú zverejnené na príslušnom ligovom webe je
-          cena 5€/h do 16:00 a 6€/h od 16:00.
+          cena 5€/h.
         </p>
         <p class="text-center">
-          <%= link_to 'Rezervácie 💦', 'https://kurtykupko.skedda.com/booking', class: 'btn btn-success', target: :_blank %>
+          <%= link_to 'Obsadenosť 💦', 'https://kurtykupko.skedda.com/booking', class: 'btn btn-success', target: :_blank %>
           <%= link_to "📞", 'tel:0903260749', class: "btn btn-warning" %>
         </p>
       </div>
