Changed text on page.

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -32,6 +32,7 @@
 <% end %>
 
 <p class="text-center">
+  <%= link_to 'Chcem sa pridať!', pages_season2024_path, class: 'btn btn-sm btn-warning' %>
   <button class="btn btn-success btn-sm" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">
     Inštrukcie k zápasom
   </button>
